# eos

./: CMakeLists.txt  LICENSE  README.md
include/eos/: linear_set.h  unique_vector.h
test/tests/: linear_set_test.cc  unique_vector_test.cc
